// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> snapshots should render button with props: {"kind":"primary","disabled":false} 1`] = `
<button
  class="button button-primary"
/>
`;

exports[`<Button /> snapshots should render button with props: {"kind":"primary","disabled":true} 1`] = `
<button
  class="button button-primary button-disabled"
/>
`;

exports[`<Button /> snapshots should render button with props: {"kind":"secondary","disabled":false} 1`] = `
<button
  class="button button-secondary"
/>
`;

exports[`<Button /> snapshots should render button with props: {"kind":"secondary","disabled":true} 1`] = `
<button
  class="button button-secondary button-disabled"
/>
`;

exports[`<Button /> snapshots should render buttons of kind: primary 1`] = `
<button
  class="button button-primary"
/>
`;

exports[`<Button /> snapshots should render buttons of kind: secondary 1`] = `
<button
  class="button button-secondary"
/>
`;
